<resources>

    <!-- —————————————————— 全局共用文字 ———————————————————————————————————————————————————————————————————————— -->
    <string name="test">这是测试文字</string>
    <string name="common_cancel">取消</string>
    <string name="common_enter">确定</string>
    <string name="common_continue">继续</string>
    <string name="common_prompt_dialog_title">提示</string>
    <string name="common_prompt_dialog_default_title">温馨提示</string>

    <!-- —————————————————— dialog文字 ——————————————————————————————— -->

    <!-- 数据加载dialog公用提示 -->
    <string name="common_prompt_loading">加载中...</string>
    <string name="common_prompt_empty">暂无数据...</string>
    <string name="common_prompt_serivce">加载失败,点击重试...</string>
    <string name="common_prompt_network">网络错误,请查看网络...</string>
    <string name="common_prompt_timeout_error">请求超时,点击重试...</string>
    <string name="common_pull_to_refresh_last_page">哥,这次真的没有了...</string>


    <!-- —————————————————— photo 加载图片文字 ——————————————————————————————— -->
    <string name="common_photo_not_network">当前无网络</string>
    <string name="common_photo_io_error">加载图片失败</string>
    <string name="common_photo_out_of_memory">内存不足</string>
    <string name="common_photo_decoding_error">解析错误</string>
    <string name="common_photo_unknown">未知路径</string>

    <!-- —————————————————— app 版本升级 ——————————————————————————————— -->
    <string name="auto_update_new_update_available">发现新版本</string>
    <string name="auto_update_dialog_positive_button">立即下载</string>
    <string name="auto_update_dialog_negative_button">取消</string>
    <string name="auto_update_app_no_new_update">没有发现新版本</string>
    <string name="auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="auto_update_download_success">下载完成，点击安装</string>
    <string name="auto_update_downloading">正在下载</string>
    <string name="auto_update_download_wait">请稍候...</string>
    <string name="auto_update_download_app">正在更新新版本</string>
    <string name="auto_update_download_app_title"> 下载</string>

</resources>
