<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_prompt_dialog_content_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mTvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="35px"
        android:paddingRight="25px"
        android:paddingTop="35px"
        android:text="@string/common_prompt_dialog_default_title"
        android:textColor="@color/common_prompt_dialog_title_color"
        android:textSize="@dimen/common_dialog_title_size" />


    <TextView
        android:id="@+id/mTvContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingBottom="15px"
        android:paddingLeft="35px"
        android:paddingRight="35px"
        android:paddingTop="35px"
        android:textColor="@color/common_prompt_dialog_content_color"
        android:textSize="@dimen/common_dialog_content_size" />


    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/mLlBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginBottom="20px"
        android:layout_marginRight="15px"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mTvBtnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:paddingTop="20px"
            android:text="@string/common_cancel"
            android:textSize="@dimen/common_dialog_btn_text_size" />


        <TextView
            android:id="@+id/mTvBtnMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:paddingTop="20px"
            android:text="@string/common_continue"
            android:textSize="@dimen/common_dialog_btn_text_size" />


        <TextView
            android:id="@+id/mTvBtnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:paddingTop="20px"
            android:text="@string/common_enter"
            android:textSize="@dimen/common_dialog_btn_text_size" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>